3570.	[bug]		Check internal pointers are valid when loading map
                        files. [RT #33403]

3569.	[contrib]	Ported mysql DLZ driver to dynamically-loadable
			module, and added multithread support. [RT #33394]

3568.	[cleanup]	Add a product description line to the version file,
			to be reported by named -v/-V. [RT #33366]

3567.	[bug]		Silence clang static analyzer warnings. [RT #33365]

3566.	[func]		Log when forwarding updates to master. [RT #33240]

3564.	[bug]		Improved handling of corrupted map files. [RT #33380]

3563.	[contrib]	zone2sqlite failed with some table names. [RT #33375]

3562.	[func]		Update map file header format to include a SHA-1 hash
			of the database content, so that corrupted map files
			can be rejected at load time. [RT #32459]

3561.	[bug]		dig: issue a warning if an EDNS query returns FORMERR
			or NOTIMP.  Adjust usage message. [RT #33363]
			
3560.	[bug]		isc-config.sh did not honour includedir and libdir
			when set via configure. [RT #33345]

3559.	[func]		Check that both forms of Sender Policy Framework
			records exist or do not exist. [RT #33355]

3558.	[bug]		IXFR of a DLZ stored zone was broken. [RT #33331]

3557.	[bug]		Reloading redirect zones was broken. [RT #33292]

3556.	[maint]		Added AAAA for D.ROOT-SERVERS.NET.

3555.	[bug]		Address theoretical race conditions in acache.c
			(change #3553 was incomplete). [RT #33252]

3554.	[bug]		RRL failed to correctly rate-limit upward
			referrals and failed to count dropped error
			responses in the statistics. [RT #33225]

3553.	[bug]		Address suspected double free in acache. [RT #33252]

3552.	[bug]		Wrong getopt option string for 'nsupdate -r'.
			[RT #33280]

3551.	[bug]		resolver.querydscp[46] were uninitialized.  [RT #32686]

3550.	[func]		Unified the internal and export versions of the
			BIND libraries, allowing external clients to use
			the same libraries as BIND. [RT #33131]

3549.	[doc]		Documentation for "request-nsid" was missing.
			[RT #33153]
