@@ -1,3 +1,6 @@
+3571.	[bug]		Address race condition in dns_client_startresolve().
+			[RT #33234]
+
 3570.	[bug]		Check internal pointers are valid when loading map
                         files. [RT #33403]
 
